--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
             <p>
                 This project was coded by
                 <a href="https://github.com/dashboard" target="_blank">Ntokozo Mtsweni</a> and is
-                <a href="#" target="_blank"> on GitHub</a> and
+                <a href="https://github.com/NtokozoDevs/my-weather-application" target="_blank"> on GitHub</a> and
                 <a href="#" target="_blank">hosted on Netlify</a>
             </p>
         </footer>
