--- a/index.html
+++ b/index.html
@@ -40,7 +40,7 @@
         <footer>
             <p>
                 This project was coded by
-                <a href="https://github.com/dashboard" target="_blank">Ntokozo Mtsweni</a> and is
+                <a href="https://github.com/dashboard" target="_blank">Ntokozo P Mtsweni</a> and is
                 <a href="https://github.com/NtokozoDevs/my-weather-application" target="_blank"> on GitHub</a> and
                 <a href="#" target="_blank">hosted on Netlify</a>
             </p>
